butler slack