@@ -1,10 +1,9 @@
 # Dockerfile
 
 FROM openjdk:8-jre-alpine
-ENV TZ Asia/Seoul
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
 RUN apk add --no-cache bash
 EXPOSE 8080
-COPY ./target/*.jar /data/ROOT.jar
 WORKDIR /data
-CMD ["java", "-jar", "ROOT.jar"]
+ENTRYPOINT exec java $JAVA_OPTS -jar ROOT.jar
+COPY ./target/*.jar /data/ROOT.jar
